--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Game</title>
     </head>
-        <p>hello</p>
+        <p>hello mozoooo!!</p>
         <p></p>
         <body>
             <script  src="app1.js"></script>
