proof new things

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Game</title>
     </head>
         <p>hello mozoooo!!</p>
-        <p></p>
+        <p>proof new things</p>
         <body>
             <script  src="app1.js"></script>
             
